# sagemaker-scikit-learn-container

./: .dockerignore  .gitignore  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.rst  buildspec.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.parquet  tox.ini
ci/: buildspec-extension.yml  buildspec.yml  buildspec_arm.yml  buildspec_arm64.yml
ci/0.20.0/: buildspec.yml
ci/0.20.x/: buildspec.yml
docker/0.20-2/base/: Dockerfile.cpu
docker/0.20-2/final/: Dockerfile.cpu
docker/0.20.0/base/: Dockerfile.cpu  Dockerfile_arm.cpu  Dockerfile_arm64.cpu
docker/0.20.0/final/: Dockerfile.cpu  Dockerfile_arm.cpu  Dockerfile_arm64.cpu
docker/0.21.2/base/: Dockerfile.cpu
docker/0.21.2/extension/: Dockerfile.cpu  README.md
docker/0.21.2/final/: Dockerfile.cpu
docker/0.21.x/base/: Dockerfile.cpu
docker/0.21.x/final/: Dockerfile.cpu
docker/0.22.2/base/: Dockerfile.cpu
docker/0.22.2/final/: Dockerfile.cpu
docker/0.23-1/base/: Dockerfile.cpu  Dockerfile_arm.cpu
docker/0.23-1/extension/: Dockerfile.cpu  README.md
docker/0.23-1/final/: Dockerfile.cpu  Dockerfile_arm.cpu
docker/0.23.1-1/base/: Dockerfile.cpu
docker/0.23.1-1/final/: Dockerfile.cpu
docker/1.0-1/base/: Dockerfile.cpu  (+2 more)
src/sagemaker_sklearn_container/: __init__.py  exceptions.py  handler_service.py  serving.py  serving_mms.py  training.py
test/: conftest.py
test/integration/: test_multiple_model_endpoint.py
test/unit/: test_handler_service.py  test_modules.py  test_serving.py  test_serving_mms.py  test_training.py
test/utils/: local_mode.py
(+41 files in other folders)
